# spec-u-llm

./: .gitmodules  README.md  pyproject.toml
prompts/: README.md  list_changes_in_FIP.md  producing_diff.md
src/fip_tools/: __init__.py  cli.py  fip.py  fip_list.py
src/fip_tools/tests/: test_fip_list.py
tests/: test_fip_list.py
